# talent_-library_demo

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/: 02-产品需求文档v2.0.md  05-Agent-Friendly架构设计深度分析.md  06-架构图.md  agent-talent-search-design.md
project/: .env.example  .gitignore  alembic.ini  batch_parse.py  docker-compose.yml  pyproject.toml  start.sh
project/alembic/: env.py
project/alembic/versions/: 001_initial.py  002_add_ckb_tables.py  003_pool_sharing.py
project/app/: main.py
project/app/api/v1/: candidates.py  router.py  search.py  tags.py  talent_pools.py
project/app/api/v1/agent/: batch.py  filter.py
project/app/api/v1/skill/: talent_detail.py  talent_search.py
project/app/core/: __init__.py  config.py  exceptions.py
project/app/db/: __init__.py  redis.py  session.py
project/app/models/: __init__.py  candidate.py
project/app/schemas/: __init__.py  candidate.py  search.py  skill.py
project/app/services/: __init__.py  ai_service.py  ckb_service.py  dedup_service.py  es_service.py  memory_service.py  resume_parser.py  router_service.py  search_service.py
project/frontend/: index.html  package-lock.json  package.json
project/frontend/src/: App.tsx  index.css  main.tsx
project/frontend/src/components/: Layout.tsx  ResumePreview.tsx  Toast.tsx
project/frontend/src/pages/: PoolDetail.tsx  Search.tsx  TalentPools.tsx  Upload.tsx
project/frontend/src/services/: api.ts
project/mcp_server/: README.md  __init__.py  server.py
project/scripts/: reindex_es.py
project/tests/: conftest.py  test_candidates.py  test_search.py  test_skills.py
